grammar.js
    source_file: ($) => seq(repeat($.import), repeat($._module_item)),

    /* Imports */

    _module_item: ($) =>
      choice(
        $.primitive,
        alias($._constant, $.global_constant),
        $.native_function,
        $.asm_function,
        alias($._function, $.global_function),
        $.struct,
        $.message,
        $.contract,
        $.trait,
      ),

    /* Built-in declarations */

    asm_function: ($) =>
      seq(
        "asm",
        field("arrangement", optional($.asm_arrangement)),
        field("attributes", optional($.function_attributes)),
        "fun",
        field("name", $.identifier),
        field("parameters", $.parameter_list),
        optional(
          seq(
            ":",
            field("result", $._type),
            field("tlb", optional($.tlb_serialization)),
          ),
        ),
        field("body", $.asm_function_body),
      ),

    asm_arrangement: ($) =>
      seq(
        "(",
        field("arguments", optional($.asm_arrangement_args)),
        field("returns", optional($.asm_arrangement_rets)),
        ")",
      ),

    asm_arrangement_args: ($) => repeat1($.identifier),
    asm_arrangement_rets: ($) =>
      seq("->", repeat1(alias($._decimal_integer, $.integer))),

    // NOTE:
    // The following asm-related pieces intentionally differ from the grammar.gg.
    // This is done to provide a better API for the language server.
    //
    // There's no catch because there's no well-defined Tact assembly syntax
    // that we've agreed upon — the current parser in the compiler
    // simply produces a large string to be passed as-is to the rest of the pipeline.
    //
    // Therefore, most of the things below would be internally refactored and/or removed completely once there's a proper definition of the Tact assembly.
    // (That does NOT require Fift removal, a first step might be just
    //  converting our syntax to bits of the Fift syntax seen below)
    //
    asm_function_body: ($) => seq("{", repeat($.asm_expression), "}"),

    // Zero or more arguments, followed by a TVM instruction
    asm_expression: ($) =>
      seq(
        field("arguments", optional($.asm_argument_list)),
        field("name", $.tvm_instruction),
      ),

    // One or more primitives
    asm_argument_list: ($) => repeat1($._asm_primitive),

    // See comments for each
    _asm_primitive: ($) =>
      choice(
        $.asm_sequence,
        $.asm_string,
        $.asm_hex_bitstring,
        $.asm_bin_bitstring,
        $.asm_boc_hex,
        $.asm_control_register,
        $.asm_stack_register,
        $.asm_integer,
        $.asm_cont_name,
      ),

    // <{ ... }>
    asm_sequence: ($) =>
      seq("<{", repeat($.asm_expression), choice("}>c", "}>s", "}>CONT", "}>")),

    // "..."
    asm_string: (_) =>
      seq(
        choice('abort"', '."', '+"', '"'),
        token.immediate(prec(1, /[^"]*/)),
        token.immediate('"'),
      ),

    // x{DEADBEEF_}
    // x{babecafe}
    // x{}
    asm_hex_bitstring: (_) => /x\{[a-fA-F0-9]*_?\}/,

    // b{011101010}
    // b{}
    asm_bin_bitstring: (_) => /b\{[01]*\}/,

    // B{DEADBEEF_} B>boc
    // B{babecafe} B>boc
    // B{} B>boc
    // <b b>
    asm_boc_hex: (_) => choice(/B\{[a-fA-F0-9]*_?\}\s+B>boc/, /<b\s+b>/),

    // c0
    // c15
    asm_control_register: (_) => /c\d\d?/,

    // s0
    // s15
    // 16 s()
    asm_stack_register: (_) => choice(/s\d\d?/, /\d\d?\d?\s+s\(\)/),

    // 0
    // 500
    // -42
    // 0b10
    // 0xff
    // 0xFF
    asm_integer: (_) => {
      const hex_literal = /-?0x[a-fA-F0-9]+/;
      const bin_literal = /-?0b[01]+/;
      const dec_literal = /-?\d+/;

      return token(
        choice(
          hex_literal, // hexadecimal
          bin_literal, // binary
          dec_literal, // decimal
        ),
      );
    },

    // $global_contractBasechainAddress INLINECALLDICT
    // $Deploy$_load_without_opcode     CALLDICT
    // %lshift                          CALL
    // __tact_context                   JMP
    // i.e., supports only some of the naming cases to prevent confusion with instructions
    // expects either of $, %, or _ to be the first character (which is often the case)
    asm_cont_name: (_) => /[$%_]\w[\w#:'%$]*/,

    // MYCODE
    // HASHEXT_SHA256
    // ADDRSHIFTMOD ADDRSHIFT#MOD
    // IF IF:
    // XCHG3 XCHG3_l
    // 2SWAP SWAP2
    // ROT -ROT
    tvm_instruction: (_) => /-?[A-Z0-9_#:]+l?/,

    /* Functions */

    _function_definition: ($) =>
      seq(
        field("attributes", optional($.function_attributes)),
        "fun",
        field("name", $.identifier),
        field("parameters", $.parameter_list),
        optional(
          seq(
            ":",
            field("result", $._type),
            field("tlb", optional($.tlb_serialization)),
          ),
        ),
        field("body", alias($.block_statement, $.function_body)),
      ),

    function_attributes: ($) =>
      repeat1(
        choice(
          $.get_attribute,
          "mutates",
          "extends",
          "virtual",
          "override",
          "inline",
          "abstract",
        ),
      ),

    get_attribute: ($) =>
      seq("get", optional(seq("(", field("value", $._expression), ")"))),

    parameter_list: ($) => seq("(", commaSepWithTrailing($.parameter), ")"),

    parameter: ($) =>
      seq(
        field("name", $.identifier),
        ":",
        field("type", $._type),
        field("tlb", optional($.tlb_serialization)),
      ),

    /* Structs, Messages */

    struct: ($) =>
      seq(
        "struct",
        field("name", $.type_identifier),
        field("body", $.struct_body),
      ),

    message: ($) =>
      seq(
        "message",
        field("value", optional($.message_value)),
        field("name", $.type_identifier),
        field("body", alias($.struct_body, $.message_body)),
      ),

    message_value: ($) => seq("(", $._expression, ")"),

    struct_body: ($) => seq("{", semicolonSepWithTrailing($.field), "}"),

    /* Fields (of messages, structs, contracts, traits) */

    field: ($) => seq(field("name", $.identifier), $._field_after_id),

    // Like _constant, but without a semicolon at the end
    storage_variable: ($) =>
      seq(field("name", $.identifier), $._field_after_id),

    _field_after_id: ($) =>
      seq(
        ":",
        field("type", $._type),
        field("tlb", optional($.tlb_serialization)),
        optional(seq("=", field("value", $._expression))),
      ),

    /* Contracts, Traits */

    contract: ($) =>
      seq(
        field("attributes", optional($.contract_attributes)),
        "contract",
        field("name", $.identifier),
        field("parameters", optional($.parameter_list)),
        field("traits", optional($.trait_list)),
        field("body", $.contract_body),
      ),

    contract_body: ($) =>
      seq(
        "{",
        repeat(
          choice(
            seq($._body_item_without_semicolon, ";"),
            $.init_function,
            $._receiver_function,
            alias($._function_definition, $.storage_function),
          ),
        ),
        optional($._body_item_without_semicolon),
        "}",
      ),

    _body_item_without_semicolon: ($) =>
      choice(
        $.storage_constant,
        $.storage_variable,
        alias($._function_declaration, $.storage_function),
      ),

    init_function: ($) =>
      seq(
        "init",
        field("parameters", $.parameter_list),
        field("body", alias($.block_statement, $.function_body)),
      ),

    _receiver_function: ($) =>
      choice($.receive_function, $.bounced_function, $.external_function),

    receive_function: ($) =>
      seq(
        "receive",
        "(",
        field("parameter", optional(choice($.string, $.parameter))),
        ")",
        field("body", alias($.block_statement, $.function_body)),
      ),

    bounced_function: ($) =>
      seq(
        "bounced",
        "(",
        field("parameter", $.parameter),
        ")",
        field("body", alias($.block_statement, $.function_body)),
      ),

    external_function: ($) =>
      seq(
        "external",
        "(",
        field("parameter", optional(choice($.string, $.parameter))),
        ")",
        field("body", alias($.block_statement, $.function_body)),
      ),

    /* Statements*/

    _statement: ($) =>
      choice($._statement_with_brace, seq($._statement_without_semicolon, ";")),

    _statement_without_semicolon: ($) =>
      choice(
        $.let_statement, // StatementLet
        $.return_statement, // StatementReturn
        $.expression_statement, // StatementExpression
        $.assignment_statement, // StatementAssign
        $.augmented_assignment_statement, // StatementAugmentedAssign
        $.do_until_statement, // StatementUntil
        $.destruct_statement, // StatementDestruct
      ),

    let_statement: ($) =>
      seq(
        "let",
        field("name", $.identifier),
        optional(
          seq(
            ":",
            field("type", $._type),
            field("tlb", optional($.tlb_serialization)),
          ),
        ),
        "=",
        field("value", $._expression),
      ),

    destruct_statement: ($) =>
      seq(
        "let",
        field("name", $.type_identifier),
        field("binds", $.destruct_bind_list),
        "=",
        field("value", $._expression),
      ),

    destruct_bind_list: ($) =>
      seq("{", commaSepWithTrailingRest($.destruct_bind), "}"),

    destruct_bind: ($) =>
      seq(
        field("name", $.identifier),
        optional(seq(":", field("bind", $.identifier))),
      ),

    block_statement: ($) =>
      prec.right(
        seq(
          "{",
          repeat($._statement),
          optional($._statement_without_semicolon),
          "}",
        ),
      ),

    return_statement: ($) => seq("return", optional($._expression)),

    expression_statement: ($) => seq($._expression),

    assignment_statement: ($) =>
      prec.right(
        "assign_stmt",
        seq(
          field("left", $._path_expression),
          "=",
          field("right", $._expression),
        ),
      ),

    augmented_assignment_statement: ($) =>
      prec.right(
        "assign_stmt",
        seq(
          field("left", $._path_expression),
          field(
            "operator",
            choice(
              "+=",
              "-=",
              "*=",
              "/=",
              "%=",
              "&=",
              "|=",
              "^=",
              "||=",
              "&&=",
              ">>=",
              "<<=",
            ),
          ),
          field("right", $._expression),
        ),
      ),

    if_statement: ($) =>
      seq(
        "if",
        "(",
        field("condition", $._expression),
        ")",
        field("consequence", $.block_statement),
        field("alternative", optional($.else_clause)),
      ),

    else_clause: ($) => seq("else", choice($.block_statement, $.if_statement)),

    while_statement: ($) =>
      seq(
        "while",
        "(",
        field("condition", $._expression),
        ")",
        field("body", $.block_statement),
      ),

    repeat_statement: ($) =>
      seq(
        "repeat",
        "(",
        field("condition", $._expression),
        ")",
        field("body", $.block_statement),
      ),

    do_until_statement: ($) =>
      seq(
        "do",
        field("body", $.block_statement),
        "until",
        "(",
        field("condition", $._expression),
        ")",
      ),

    try_statement: ($) =>
      seq(
        "try",
        field("body", $.block_statement),
        field("handler", optional($.catch_clause)),
      ),

    catch_clause: ($) =>
      seq(
        "catch",
        "(",
        field("name", $.identifier),
        ")",
        field("body", $.block_statement),
      ),

    foreach_statement: ($) =>
      seq(
        "foreach",
        "(",
        field("key", $.identifier),
        ",",
        field("value", $.identifier),
        "in",
        field("map", $._expression),
        ")",
        field("body", $.block_statement),
      ),

    _path_expression: ($) =>
      choice($.self, $.identifier, $.field_access_expression),

    /* Expressions */

    _expression: ($) =>
      choice(
        $.ternary_expression, // ExpressionConditional
        $.binary_expression, // ExpressionBinary
        $.unary_expression, // ExpressionUnary
        // $.unary_suffix_expression, // ExpressionUnarySuffix
        $.value_expression, // ExpressionValue
      ),

    ternary_expression: ($) =>
      prec.right(
        "ternary_expr",
        seq(
          field("condition", $._expression),
          "?",
          field("consequence", $._expression),
          ":",
          field("alternative", $._expression),
        ),
      ),

    binary_expression: ($) =>
      choice(
        ...[
          ["||", "logical_or"], // ExpressionOr
          ["&&", "logical_and"], // ExpressionAnd

          ["|", "bitwise_or"], // ExpressionBinaryOr
          ["^", "bitwise_xor"], // ExpressionBinaryXor
          ["&", "bitwise_and"], // ExpressionBinaryAnd

          ["!=", "binary_equality"], // ExpressionEquality
          ["==", "binary_equality"], // ExpressionEquality

          [">", "binary_relation"], // ExpressionCompare
          [">=", "binary_relation"], // ExpressionCompare
          ["<", "binary_relation"], // ExpressionCompare
          ["<=", "binary_relation"], // ExpressionCompare

          [">>", "bitwise_shift"], // ExpressionBinaryShift
          ["<<", "bitwise_shift"], // ExpressionBinaryShift

          ["+", "binary_addition"], // ExpressionAdd
          ["-", "binary_addition"], // ExpressionAdd

          ["*", "binary_multiplication"], // ExpressionMul
          ["/", "binary_multiplication"], // ExpressionMul
          ["%", "binary_multiplication"], // ExpressionMul
        ].map(([operator, precedence]) =>
          prec.left(
            precedence,
            seq(
              field("left", $._expression),
              field(
                "operator",
                operator,
                // alias(operator, {
                //   '||': $.logical_or,
                //   '&&': $.logical_and,
                //   '!=': $.binary_comparison_ineq,
                //   '==': $.binary_comparison,
                //   '>' : $.binary_relation_gt,
                //   '>=': $.binary_relation_ge,
                //   '<' : $.binary_relation_lt,
                //   '<=': $.binary_relation_le,
                //   '>>': $.bitwise_expression_sright,
                //   '<<': $.bitwise_expression_sleft,
                //   '&' : $.bitwise_expression_and,
                //   '|' : $.bitwise_expression_or,
                //   '+' : $.binary_addition_plus,
                //   '-' : $.binary_addition_minus,
                //   '*' : $.binary_multiplication_times,
                //   '/' : $.binary_multiplication_divide,
                //   '%' : $.binary_multiplication_modulo,
                // }[operator])
              ),
              field("right", $._expression),
            ),
          ),
        ),
      ),

    unary_expression: ($) =>
      prec.left(
        "unary_expr",
        seq(
          field(
            "operator",
            choice(
              "-",
              "+",
              "!",
              "~",
              // alias('-', $.minus_op), alias('+', $.plus_op), alias('!', $.not_op)
            ),
          ),
          field("argument", $._expression),
        ),
      ),

    non_null_assert_expression: ($) =>
      prec.left(
        "non_null_assert_expr",
        seq(field("argument", $._expression), field("operator", "!!")),
      ),

    static_call_expression: ($) =>
      prec.right(
        "static_call_expr",
        seq(field("name", $.identifier), field("arguments", $.argument_list)),
      ),

    null: (_) => "null",
