test/corpus/function.txt
============================================
function
============================================

fun empty();
abstract fun abstract();
abstract fun abstractType(): Int;
abstract fun abstractWithParam(param1: Int, );
abstract fun abstractTypeWithParam(param1: Int, ): Int;

fun basic(): Int {
    return 0;
}

extends fun extendsType(self: String, ): String {
    return self;
}

extends mutates fun extendsMutatesType(self: String, ) {
    self = self + self;
}

get mutates extends virtual override inline abstract fun allAttr();

fun paramAs(param: Slice as bytes32);

get(crc32("tact") + 42) fun methodId();

---

(source_file
  (global_function
    name: (identifier)
    parameters: (parameter_list))
  (global_function
    attributes: (function_attributes)
    name: (identifier)
    parameters: (parameter_list))
  (global_function
    attributes: (function_attributes)
    name: (identifier)
    parameters: (parameter_list)
    result: (type_identifier))
  (global_function
    attributes: (function_attributes)
    name: (identifier)
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (type_identifier))))
  (global_function
    attributes: (function_attributes)
    name: (identifier)
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (type_identifier)))
    result: (type_identifier))
  (global_function
    name: (identifier)
    parameters: (parameter_list)
    result: (type_identifier)
    body: (function_body
      (return_statement
        (integer))))
  (global_function
    attributes: (function_attributes)
    name: (identifier)
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (type_identifier)))
    result: (type_identifier)
    body: (function_body
      (return_statement
        (self))))
  (global_function
    attributes: (function_attributes)
    name: (identifier)
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (type_identifier)))
    body: (function_body
      (assignment_statement
        left: (self)
        right: (binary_expression
          left: (self)
          right: (self)))))
  (global_function
    attributes: (function_attributes
      (get_attribute))
    name: (identifier)
    parameters: (parameter_list))
  (global_function
    name: (identifier)
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (type_identifier)
        tlb: (tlb_serialization
          type: (identifier)))))
  (global_function
    attributes: (function_attributes
      (get_attribute
        value: (binary_expression
          left: (static_call_expression
            name: (identifier)
            arguments: (argument_list
              (argument
                value: (string))))
          right: (integer))))
    name: (identifier)
    parameters: (parameter_list)))
